2006-04-05  MenTaLguY  <mental@rydia.net>

	* configure.ac, share/keyboards/.cvsignore, share/keyboards/Makefile.am,
	  share/keyboards/README, share/keys/.cvsignore, share/keys/Makefile.am,
	  share/keys/Makefile.in, share/Makefile.am:

	  share/keyboards -> share/keys

	* share/keys/Makefile.am, share/keys/default.xml, src/Makefile_insert,
	  src/shortcuts.cpp, src/shortcuts-default-xml.cpp:

      first shot at configurable keymaps

2006-04-05  MenTaLguY  <mental@rydia.net>

	* src/io/Makefile_insert, src/io/resource.cpp, src/io/resource.h:

	  introduce uniform resource path API to replace copy-and-pasted hacks

2006-04-05  Jon A. Cruz  <jon@joncruz.org>

	* src/svg/svg-color-test.h, src/svg/svg-color.cpp:

	  Tuned icc-color() parsing.

2006-04-02  Jon A. Cruz  <jon@joncruz.org>

	* src/color-profile.h, src/color-profile.cpp,
	  src/color-profile-fns.h, src/sp-image.h, src/sp-image.cpp:

	  Initial support of color-profile on <image> elements.

2006-04-02  Jon A. Cruz  <jon@joncruz.org>

	* src/color-profile.h, src/color-profile.cpp,
	  src/color-profile-fns.h, src/Makefile_insert, src/attributes.cpp,
	  src/attributes.h, src/sp-object-repr.cpp:

	  Adding support for <color-profile> element.

2006-04-02  Jon A. Cruz  <jon@joncruz.org>

	* src/knot.h: Fixed warning messages.

2006-04-01  Jon A. Cruz  <jon@joncruz.org>

	* src/ui/widget/selected-style.cpp:

	  Safety check for null pointer.
	
2006-04-01  Jon A. Cruz  <jon@joncruz.org>

	* configure.ac, src/interface.cpp, src/dialogs/swatches.cpp:

	  Introducing optional LittleCms use.
	
2006-03-31  MenTaLguY  <mental@rydia.net>

    * src/dyna-draw-context.cpp, src/dyna-draw-context.cpp:

	  merge ::dragging and ::dynahand

2006-03-31  MenTaLguY  <mental@rydia.net>

    * src/dyna-draw-context.h: add documentation

2006-03-29  Andrius R. <knutux@gmail.com>

	* src/enums.h, src/selection-chemistry.cpp,
	  src/selection.h, src/selection.cpp,
	  src/ui/dialog/inkscape-preferences.cpp,