@@ -1,3 +1,11 @@
+2006-04-06  Jon A. Cruz  <jon@joncruz.org>
+
+	* src/Makefile_insert, src/Makefile.am, src/color-profile.cpp
+	  src/color-profile.h, src/color-profile-fns.h,
+	  src/color-profile-test.h, src/sp-image.cpp:
+
+	  Adding rendering-intent to <color-profile>.
+
 2006-04-05  MenTaLguY  <mental@rydia.net>
 
 	* configure.ac, share/keyboards/.cvsignore, share/keyboards/Makefile.am,
